--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -60,7 +60,7 @@ jobs:
     - name: 设置 KernelSU
       run: |
         cd kernel_workspace/kernel_platform
-        curl -LSs https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh | bash -s main
+        curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/refs/heads/main/kernel/setup.sh" | bash -
         cd KernelSU
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
@@ -70,28 +70,28 @@ jobs:
       run: |
         cd kernel_workspace
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}
-        git clone https://github.com/TheWildJames/kernel_patches.git
+        git clone https://github.com/TanakaLun/kernel_patches4mksu.git
         cd kernel_patches
-        sed -i -e 's/KernelSU-Next/KernelSU/g' apk_sign.c_fix.patch  core_hook.c_fix.patch  selinux.c_fix.patch
-        cd ../kernel_platform
+        cp ../kernel_patches4mksu/mksu_susfs.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         # 应用补丁
         cd ./KernelSU
+        patch -p1 --forward < mksu_susfs.patch || true
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ../common
-        patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
+        patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         cp ../../kernel_patches/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
-        cd ..
-        cp ../kernel_patches/apk_sign.c_fix.patch ./
-        patch -p1 -F 3 < apk_sign.c_fix.patch
-        cp ../kernel_patches/core_hook.c_fix.patch ./
-        patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
-        cp ../kernel_patches/selinux.c_fix.patch ./
-        patch -p1 -F 3 < selinux.c_fix.patch
+        # cd ..
+        # cp ../kernel_patches/apk_sign.c_fix.patch ./
+        # patch -p1 -F 3 < apk_sign.c_fix.patch
+        # cp ../kernel_patches/core_hook.c_fix.patch ./
+        # patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
+        # cp ../kernel_patches/selinux.c_fix.patch ./
+        # patch -p1 -F 3 < selinux.c_fix.patch
 
     - name: 编译内核
       run: |
@@ -115,6 +115,6 @@ jobs:
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
-        name: Image_KernelSU-Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+        name: Image_KernelSU_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
         path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/Image
       continue-on-error: true 
