--- a/.github/workflows/Build-KernelSU-Next.yml
+++ b/.github/workflows/Build-KernelSU-Next.yml
@@ -5,23 +5,23 @@ on:
       CPU:
         description: "分支"
         required: true 
-        default: 'sm7675'
+        default: 'sm8550'
       FEIL:
         description: "配置文件"
         required: true 
-        default: 'oneplus_ace_3v_v'
+        default: 'oneplus_ace3_v'
       CPUD:
         description: "处理器代号"
         required: true 
-        default: 'pineapple'
+        default: 'kalama'
       ANDROID_VERSION:
         description: "内核安卓版本"
         required: true 
-        default: 'android14'
+        default: 'android13'
       KERNEL_VERSION:
         description: "内核版本"
         required: true 
-        default: '6.1'
+        default: '5.15'
       KSUNEXT_ENABLED:
         description: "添加 KSU Next"
         required: true 
@@ -49,8 +49,8 @@ jobs:
           
       - name: Configure Git
         run: |
-         git config --global user.name "build"
-         git config --global user.email "3436378798@qq.com"
+         git config --global user.name "yuanqiongyoukong"
+         git config --global user.email "413722718@qq.com"
 
       - name: Install dependencies
         run: |
