--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -68,13 +68,13 @@ jobs:
         mkdir kernel_workspace && cd kernel_workspace
         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b refs/heads/oneplus/${{ github.event.inputs.CPU }} -m ${{ github.event.inputs.FEIL }}.xml --depth=1
         repo --trace sync -c -j$(nproc --all) --no-tags
-        rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
-        sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
         
     - name: 添加 KernelSU
       if: github.event.inputs.KSUNEXT_ENABLED == 'true'
       run: |
-        cd kernel_workspace/kernel_platform
+        cd kernel_platform
+        rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
+        sed -i 's/ -dirty//g' build/kernel/kleaf/workspace_status_stamp.py
         curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/refs/heads/main/kernel/setup.sh" | bash -
         cd KernelSU
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
@@ -85,30 +85,21 @@ jobs:
       if: github.event.inputs.SUSFS_ENABLED == 'true'
       run: |
         cd kernel_workspace
-        git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}
-        git clone https://github.com/TanakaLun/kernel_patches4mksu.git
+        git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }} --depth 1
+        git clone https://github.com/TheWildJames/kernel_patches.git --depth 1
         cd kernel_patches
-        cp ../kernel_patches4mksu/mksu_susfs.patch ./KernelSU/
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
+        cp ../kernel_patches/mksu_susfs.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         # 应用补丁
         cd ./KernelSU
         patch -p1 --forward < mksu_susfs.patch || true
-        # patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ../common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         cp ../../kernel_patches/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
-        cd ..
-        # cp ../kernel_patches/apk_sign.c_fix.patch ./
-        # patch -p1 -F 3 < apk_sign.c_fix.patch
-        # cp ../kernel_patches/core_hook.c_fix.patch ./
-        # patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
-        # cp ../kernel_patches/selinux.c_fix.patch ./
-        # patch -p1 -F 3 < selinux.c_fix.patch
-
+        
     - name: 编译内核
       run: |
         cd kernel_workspace
