--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -83,9 +83,9 @@ jobs:
       run: |
         cd kernel_workspace
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }} --depth 1
-        git clone https://github.com/TheWildJames/kernel_patches.git --depth 1
+        git clone https://github.com/yuanqiongyoukong/KernelSU-SUS-ACE3.git --depth 1
         cd kernel_platform
-        cp ../kernel_patches/mksu_susfs.patch ./KernelSU/
+        cp ../KernelSU-SUS-ACE3/kernel_patches/mksu_susfs.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
@@ -93,6 +93,7 @@ jobs:
         
         # 应用补丁
         cd ./KernelSU
+        rsync -avz ../../KernelSU-SUS-ACE3/kernel_patches/kernel/ ./kernel
         patch -p1 --forward < mksu_susfs.patch || true
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ../common
