--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -83,23 +83,22 @@ jobs:
       run: |
         cd kernel_workspace
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }} --depth 1
-        git clone https://github.com/yuanqiongyoukong/KernelSU-SUS-ACE3.git --depth 1
+        # git clone https://github.com/yuanqiongyoukong/KernelSU-SUS-ACE3.git --depth 1
         cd kernel_platform
-        cp ../KernelSU-SUS-ACE3/kernel_patches/mksu_susfs.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+        # cp ../KernelSU-SUS-ACE3/kernel_patches/mksu_susfs.patch ./KernelSU/
         
         # 应用补丁
         cd ./KernelSU
-        rsync -avz ../../KernelSU-SUS-ACE3/kernel_patches/kernel/ ./kernel
-        patch -p1 --forward < mksu_susfs.patch || true
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ../common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
-        cp ../../kernel_patches/69_hide_stuff.patch ./
-        patch -p1 -F 3 < 69_hide_stuff.patch
+        # cd ../KernelSU
+        # patch -p1 --forward < mksu_susfs.patch || true
+        # rsync -avz ../../KernelSU-SUS-ACE3/kernel_patches/kernel/ ./kernel
         
     - name: 编译内核
       run: |
