--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -22,7 +22,7 @@ on:
         description: "内核版本"
         required: true 
         default: '5.15'
-      KSUNEXT_ENABLED:
+      KSU_ENABLED:
         description: "添加 KernelSU"
         required: true 
         type: boolean
@@ -67,7 +67,7 @@ jobs:
         repo --trace sync -c -j$(nproc --all) --no-tags --fail-fast
         
     - name: 添加 KernelSU
-      if: github.event.inputs.KSUNEXT_ENABLED == 'true'
+      if: github.event.inputs.KSU_ENABLED == 'true'
       run: |
         cd kernel_workspace/kernel_platform
         rm -f ./common/android/abi_gki_protected_exports_* ./msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
