更新 KernelSU.yml

--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -84,11 +84,12 @@ jobs:
       run: |
         cd kernel_workspace
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }} --depth 1
-        git clone https://github.com/yuanqiongyoukong/KernelSU-SUS-ACE3.git --depth 1
+        git clone https://github.com/TanakaLun/kernel_patches4mksu.git
+        git clone https://github.com/yuhangle/Action-KernelSU-Next -b dev
         cd kernel_platform
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
-        cp ../KernelSU-SUS-ACE3/mksu_patch/mksu_susfs.patch ./KernelSU/
-        cp ../KernelSU-SUS-ACE3/mksu_patch/kernel/* ./KernelSU/
+        cp ../kernel_patches4mksu/mksu_susfs.patch ./KernelSU/
+        cp ../Action-KernelSU-Next/mksu_patch/kernel/* ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
