--- a/.github/workflows/kernel-next_ace3.yml
+++ b/.github/workflows/kernel-next_ace3.yml
@@ -75,6 +75,7 @@ jobs:
         # sed -i 's/local default_value=enable/local default_value=disable/Ig' kernel_platform/oplus/build/oplus_setup.sh         # 设置默认值为禁用
         
     - name: 添加KernelSU Next
+      if: github.event.inputs.IF_KSU_OR_NEXT_OR_NONE == 'ksu-next'
       run: |
         cd kernel/kernel_platform/common
         curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -s next
