更新 KernelSU.yml

--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -112,14 +112,14 @@ jobs:
     - name: 制作 AnyKernel3
       run: |
         rm -rf ./AnyKernel3/.git
-        cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/gki_kernel/dist/Image ./AnyKernel3/
+        cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/gki_kernel/dist/Image kernel_workspace/AnyKernel3/
       continue-on-error: true 
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
         name: AnyKernel3_KernelSU-Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
-        path: ./AnyKernel3/*
+        path: kernel_workspace/AnyKernel3/*
       continue-on-error: true 
         
     - name: 上传 Image
