--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -33,7 +33,6 @@ on:
         type: choice
         options:
           - mksu
-          - rksu
           - ksu
       SUSFS_ENABLED:
         description: "添加 SUSFS"
@@ -46,7 +45,6 @@ on:
         type: choice
         options:
           - mksu
-          - rksu
           - ksu
       KERNEL_NAME:
         description: "自定义内核后版本名"
@@ -88,8 +86,35 @@ jobs:
         fi
         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
         rm -rf kernel_workspace/AnyKernel3/.git
-        
+
     - name: 添加 KernelSU
+      if: github.event.inputs.KSU_ENABLED == 'true' && github.event.inputs.KSU_VERSION == 'ksu'
+      run: |
+        cd kernel_workspace/kernel_platform
+        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
+        cd KernelSU
+        KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
+        echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
+        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
+        
+    - name: 添加 SUSFS
+      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_VERSION == 'ksu'
+      run: |
+        cd kernel_workspace
+        git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }} --depth 1
+        cd kernel_platform
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
+        cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
+        cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+        
+        # 应用补丁
+        cd ./KernelSU
+        patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
+        cd ../common
+        patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
+        
+    - name: 添加 MKernelSU
       if: github.event.inputs.KSU_ENABLED == 'true' && github.event.inputs.KSU_VERSION == 'mksu'
       run: |
         cd kernel_workspace/kernel_platform
@@ -100,7 +125,7 @@ jobs:
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
         sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
         
-    - name: 添加 SUSFS
+    - name: 添加 MSUSFS
       if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_VERSION == 'mksu'
       run: |
         cd kernel_workspace
